--- a/README
+++ b/README
@@ -1,1 +1,51 @@
-README file
+Observations
+
+In the file we download the new line character seems to not be printed correctly. That's the only difference we get between the file downloaded with wget and our program.
+
+---------
+
+High-level approach
+
+In order to implement HTTP we reused the code for project 2.
+For TCP and IP, we created classes for the headers and packets of both, and then methods for receiving and sending packets.
+First we do the three-way handshake and afterwards we send the connection petition.
+Then we receive packets and send ack for those packets, and transfer them to the HTTP layer.
+Finally we write the data to a file.
+
+---------
+
+Features implemented
+
+Everything that was asked is implemented
+
+HTTP
+-Everything from project 2
+-Writing the result to a file
+
+TCP
+-Generate correct TCP Headers
+-Generate correct checksums
+-Verify incoming TCP checksums
+-Select valid local port
+-Handle seq and ack numbers
+-Three way handshake
+-Connection teardown
+-Handle seq and ack numbers
+-Timeout functionality
+-Out of order packets
+-Duplicated packets
+-Advertisement window (fixed size)
+-Congestion window (no need to implement complex algorithm since we don't send a lot of messages)
+
+IP
+-Generate correct IP Headers
+-Generate correct checksums
+-Verify incoming IP checksums
+-Verify incoming IP address
+-Obtain local IP address
+
+---------
+
+Challenges
+
+The most difficult part is the handling of the incoming TCP packets.
